notificação e formulario aluno

--- a/ctep-electron/src/app/custom-components/loading/loading.component.html
+++ b/ctep-electron/src/app/custom-components/loading/loading.component.html
@@ -1,3 +1,7 @@
-<div *ngIf="(loadingCount$ | async) >0" class="loading" style="z-index: 10000">
-  <ons-core-loader></ons-core-loader> 
+<div
+    *ngIf="(loadingCount$ | async) > 0"
+    class="loading"
+    style="z-index: 10000;"
+>
+    <mat-spinner></mat-spinner>
 </div>
