--- a/ctep-electron/src/app/view/home/home.component.scss
+++ b/ctep-electron/src/app/view/home/home.component.scss
@@ -1,11 +1,11 @@
-@import '../../theming.scss';
+@import '../../../theming.scss';
 
 .mat-sidenav-container {
     background-image: url(/assets/images/logo-opac.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center; 
-    background-size: 90% auto;  
+    background-position: center;
+    background-size: 90% auto;
     display: flex;
     .mat-sidenav-content {
         position: absolute;
