--- a/ctep-electron/src/styles.scss
+++ b/ctep-electron/src/styles.scss
@@ -10,7 +10,7 @@ body{
     overflow-x: auto;
     home {
         .formulario {
-            >h1 {
+            h1 {
                 font-weight: 800;
                 font-family: 'Roboto-Black';
                 color: $primary;
