--- a/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
@@ -1,5 +1,12 @@
 <div class="formulario">
-    <h1>{{aluno.matricula!=null ? 'Edição' : 'Cadastro' }} de Aluno</h1>
+    <div class="header">
+        <div class="six">
+            <h1>{{aluno.matricula!=null ? 'Edição' : 'Cadastro' }} de Aluno</h1>
+        </div>
+        <div class="six buttons">
+            <button mat-raised-button color="primary" >Salvar</button>
+        </div>
+    </div>
     <mat-card>
         <mat-card-subtitle>Informações Pessoais</mat-card-subtitle>
         <div class="form-grid">
@@ -32,7 +39,7 @@
             <mat-form-field class="three" >
                 <mat-label>CEP:</mat-label>
                 <input matInput [textMask]="{mask: masks.CEP}" [(ngModel)]="aluno.cep">
-                <button mat-raised-button color="accent" matSuffix>Buscar CEP</button>
+                <button mat-raised-button color="accent" matSuffix (click)="buscarCep()">Buscar CEP</button>
             </mat-form-field>
             <mat-form-field class="six">
                 <mat-label>Endereço:</mat-label>
@@ -46,7 +53,7 @@
                 <mat-label>Cidade:</mat-label>
                 <input matInput [(ngModel)]="aluno.cidade">
             </mat-form-field>
-            
+
             <mat-form-field class="three">
                 <mat-label>Telefone:</mat-label>
                 <input matInput [textMask]="{mask: masks.Telefone}" [(ngModel)]="aluno.telefone">
