--- a/ctep-electron/src/app/app.component.html
+++ b/ctep-electron/src/app/app.component.html
@@ -1,3 +1,3 @@
-<home></home>
+<home *ngIf="(usuario$ | async) != null"></home>
 <loading-component></loading-component>
 <notification-component></notification-component>
