--- a/ctep-electron/src/app/view/aluno/aluno-menu.component.html
+++ b/ctep-electron/src/app/view/aluno/aluno-menu.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-    <mat-expansion-panel>
+    <mat-expansion-panel [expanded]='true'>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Alunos
@@ -7,10 +7,6 @@
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioAluno'] } }]"><mat-icon>person_add</mat-icon><span>Adicionar Aluno</span></a>
-            <a class="two">sdofksdg</a>
-            <a class="two">sdofksdg</a>
-            <a class="two">sdofksdg</a>
-            <a class="two">sdofksdg</a>
         </div>
     </mat-expansion-panel>
 </mat-accordion>
