--- a/ctep-electron/src/app/view/home/home.component.html
+++ b/ctep-electron/src/app/view/home/home.component.html
@@ -2,6 +2,7 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
         <mat-icon aria-hidden="false" (mouseover)="desenhar('in')">menu</mat-icon>
+        <mat-icon aria-hidden="false" class="logout" matTooltip="Sair do sistema." (click)="logout()">logout</mat-icon>
     </mat-toolbar-row>
 </mat-toolbar>
 
@@ -14,16 +15,14 @@
             <a class='logo' routerLink="/">
                 <img src="/assets/images/logo.png" alt="">
             </a>
-            <a class="menu-item" (mouseover)="desenhar('in')" routerLink="/aluno">
+            <a class="menu-item" (mouseover)="desenhar('in')" (click)="redirecionar('aluno')">
                 <mat-icon aria-hidden="false">person</mat-icon> 
                 <span>Aluno</span>
             </a>
-            <div class="menu-item" (mouseover)="desenhar('in')">
-                dsjlfadjfd
-            </div>
-            <div class="menu-item" (mouseover)="desenhar('in')">
-                dsjlfadjfd
-            </div>
+            <a class="menu-item" (mouseover)="desenhar('in')" (click)="redirecionar('turma')">
+                <mat-icon aria-hidden="false">school</mat-icon> 
+                <span>Turma</span>
+            </a>
         </section>
     </mat-sidenav>
     <mat-sidenav-content>
