--- a/ctep-electron/src/app/view/turma/turma-menu.component.html
+++ b/ctep-electron/src/app/view/turma/turma-menu.component.html
@@ -1,16 +1,17 @@
 <mat-accordion>
-    <mat-expansion-panel>
+    <mat-expansion-panel [expanded]='true'>
         <mat-expansion-panel-header>
             <mat-panel-title>
-                Alunos
+                Turma
             </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioAluno'] } }]"><mat-icon>person_add</mat-icon><span>Adicionar Aluno</span></a>
-            <a class="two">sdofksdg</a>
-            <a class="two">sdofksdg</a>
-            <a class="two">sdofksdg</a>
-            <a class="two">sdofksdg</a>
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioTurma'] } }]">
+                <mat-icon>person_add</mat-icon><span>Adicionar Turma</span>
+            </a>
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['tabelaTurma'] } }]">
+                <mat-icon>list</mat-icon><span>Listar Turmas</span>
+            </a>
         </div>
     </mat-expansion-panel>
 </mat-accordion>
