--- a/ctep-electron/src/styles.scss
+++ b/ctep-electron/src/styles.scss
@@ -1,24 +1,42 @@
 @import "./theming";
 
-body{
-	background: $white;
-	font-family: 'Roboto', sans-serif;
+body {
+    background: $white;
+    font-family: "Roboto", sans-serif;
     padding: 0;
     margin: 0;
     height: 100vh;
     min-width: 1000px;
     overflow-x: auto;
     home {
-        .formulario {
+        .formulario,
+        .tabela {
             h1 {
                 font-weight: 800;
-                font-family: 'Roboto-Black';
+                font-family: "Roboto-Black";
                 color: $primary;
                 text-transform: uppercase;
                 margin: 10px 5px;
             }
             .mat-card {
                 margin: 20px 0;
+            }
+            .header {
+                display: flex;
+                .buttons {
+                    margin-left: auto;
+                    padding-top: 10px;
+                }
+            }
+        }
+        .mat-raised-button{
+            min-width: 100px;
+            margin-left: 10px;
+            &.mat-primary {
+                background-color: $primary;
+            }
+            &.mat-accent {
+                background-color: $gray;
             }
         }
     }
@@ -39,18 +57,20 @@ body{
 .mat-expansion-panel {
     .mat-expansion-panel-header {
         background-color: $black;
-        font-family: 'Roboto-Black';
+        font-family: "Roboto-Black";
         font-size: 18px;
-        &:hover, &:focus {
-            background-color: $black!important;
+        &:hover,
+        &:focus {
+            background-color: $black !important;
         }
-        .mat-expansion-panel-header-title, .mat-expansion-indicator::after{
+        .mat-expansion-panel-header-title,
+        .mat-expansion-indicator::after {
             color: $white;
         }
     }
-    .mat-expansion-panel-body{
+    .mat-expansion-panel-body {
         padding: 25px;
-        .menu-secao > a{
+        .menu-secao > a {
             height: 30px;
             font-size: 16px;
             font-weight: bold;
@@ -69,9 +89,9 @@ body{
     }
 }
 
-.form-grid{
-	display: flex;
-	flex-wrap: wrap;
+.form-grid {
+    display: flex;
+    flex-wrap: wrap;
     .twelve {
         width: 100%;
         min-width: 120px;
@@ -120,71 +140,117 @@ body{
         margin: 0 10px;
     }
 }
-.mat-raised-button.mat-accent {
-    background-color: $gray;
-}
+
 .form-grid .mat-form-field-appearance-outline .mat-form-field-suffix .mat-raised-button {
     top: -8px;
 }
 
 .mat-dialog-container {
-    padding: 0!important;
+    padding: 0 !important;
 }
 
 .modal {
-	padding: 15px;
-	.close {
-		font-size: 20px;
-		top: 0;
-		color: $black!important;
-		width: auto !important;
-		height: auto !important;
-		position: absolute;
-		min-width: auto;
-	}
-	.modal-header {
-		font-size: 22px;
-		position: relative;
-		h3 {
-			margin-bottom: 0;
-			margin-top: 0;
-		}
-		label {
-			font-size: 12px;
-			color: #4B81C1;
-			font-weight: normal;
-			margin-bottom: 0;
-			margin-top: 0;
-		}
-		button {
-			position: absolute;
-			right: 0px;
-			top: 5px;
-			background: transparent;
-			box-shadow: none;
-			color: black;
-			width: auto!important;
-			height: auto!important;
-		}
-	}
-	.modal-body {
-		margin-top: 15px;
-		margin-bottom: 15px;
-		max-height: 70vh;
-		overflow: auto;
-		.form-grid {
-			padding: 0px;
-			background-color: white;
-			border-radius: 0px;
-			box-shadow: none;
-			label {
-				font-size: 13px;
-			}
-		}
-	}
-	.modal-footer {
-		height: 45px;
-		display: flex;
-		align-items: center;
-	}
+    padding: 15px;
+    .close {
+        font-size: 20px;
+        top: 0;
+        color: $black !important;
+        width: auto !important;
+        height: auto !important;
+        position: absolute;
+        min-width: auto;
+    }
+    .modal-header {
+        font-size: 22px;
+        position: relative;
+        h3 {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+        button {
+            position: absolute;
+            right: 0px;
+            top: 5px;
+            background: transparent;
+            box-shadow: none;
+            color: black;
+            width: auto !important;
+            height: auto !important;
+        }
+    }
+    .modal-body {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        max-height: 70vh;
+        overflow: auto;
+        .form-grid {
+            padding: 0px;
+            background-color: white;
+            border-radius: 0px;
+            box-shadow: none;
+            label {
+                font-size: 13px;
+            }
+        }
+    }
+    .modal-footer {
+        height: 45px;
+        display: flex;
+        align-items: center;
+    }
 }
+
+.mat-table {
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+    thead {
+        th {
+            color: $white;
+            background-color: $gray;
+            padding: 8px 5px;
+            border-bottom-style: none;
+            font-size: 15px;
+        }
+        th:first-child {
+            padding-left: 10px!important;
+        }
+    }
+    th, td {
+        height: 15px;
+        padding: 1px 5px !important;
+        font-size: 13px;
+    }
+    tbody {
+        tr:nth-child(odd) {
+            td {
+                background-color: #fff;
+            }
+        }
+        tr:nth-child(even) {
+            td {
+                background-color: #edeeef;
+            }
+        }
+        tr {
+            td {
+                font-size: 13px;
+                white-space: nowrap;
+                color: #2a2e43;
+                border-bottom: solid 1px #ccd0d8;
+                padding: 0px 10px !important;
+
+                table {
+                    border-spacing: 0;
+                    border-collapse: collapse;
+                    border: none;
+                    th,
+                    td {
+                        border-bottom: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
