--- a/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
@@ -1,71 +1,121 @@
 <div class="formulario">
     <div class="header">
         <div class="six">
-            <h1>{{element.matricula!=null ? 'Edição' : 'Cadastro' }} de Aluno</h1>
+            <h1>Cadastro de Aluno</h1>
         </div>
         <div class="six buttons">
             <button mat-raised-button color="accent" (click)="voltar()">Voltar</button>
-            <button mat-raised-button color="primary" >Salvar</button>
+            <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
         </div>
     </div>
-    <mat-card>
-        <mat-card-subtitle>Informações Pessoais</mat-card-subtitle>
-        <div class="form-grid">
-            <mat-form-field class="six">
-                <mat-label>Nome:</mat-label>
-                <input matInput [(ngModel)]="element.nome">
-            </mat-form-field>
-            <mat-form-field class="two">
-                <mat-label>RG:</mat-label>
-                <input matInput [(ngModel)]="element.rg">
-            </mat-form-field>
-            <mat-form-field class="two">
-                <mat-label>CPF:</mat-label>
-                <input matInput [textMask]="{mask: masks.CPF}" [(ngModel)]="element.cpf">
-            </mat-form-field>
-            <custom-datetimepicker [(value)]="element.dataNascimento" class='two' name="Data de Nascimento"></custom-datetimepicker>
-            <mat-form-field class="six">
-                <mat-label>Nome do Pai:</mat-label>
-                <input matInput [(ngModel)]="element.nomePai">
-            </mat-form-field>
-            <mat-form-field class="six">
-                <mat-label>Nome da Mãe:</mat-label>
-                <input matInput [(ngModel)]="element.nomeMae">
-            </mat-form-field>
-        </div>
-    </mat-card>
-    <mat-card>
-        <mat-card-subtitle>Endereço e Contato</mat-card-subtitle>
-        <div class="form-grid">
-            <mat-form-field class="three" >
-                <mat-label>CEP:</mat-label>
-                <input matInput [textMask]="{mask: masks.CEP}" [(ngModel)]="element.cep">
-                <button mat-raised-button color="accent" matSuffix (click)="buscarCep()">Buscar CEP</button>
-            </mat-form-field>
-            <mat-form-field class="six">
-                <mat-label>Endereço:</mat-label>
-                <input matInput [(ngModel)]="element.endereco">
-            </mat-form-field>
-            <mat-form-field class="three">
-                <mat-label>Bairro:</mat-label>
-                <input matInput [(ngModel)]="element.bairro">
-            </mat-form-field>
-            <mat-form-field class="three">
-                <mat-label>Cidade:</mat-label>
-                <input matInput [(ngModel)]="element.cidade">
-            </mat-form-field>
-            <mat-form-field class="three">
-                <mat-label>Telefone:</mat-label>
-                <input matInput [textMask]="{mask: masks.Telefone}" [(ngModel)]="element.telefone">
-            </mat-form-field>
-            <mat-form-field class="three">
-                <mat-label>Celular:</mat-label>
-                <input matInput [textMask]="{mask: masks.Celular}" [(ngModel)]="element.celular">
-            </mat-form-field>
-            <mat-form-field class="three">
-                <mat-label>E-mail:</mat-label>
-                <input matInput [(ngModel)]="element.email">
-            </mat-form-field>
-        </div>
-    </mat-card>
+    <mat-tab-group dynamicHeight color="primary">
+        <mat-tab label="Informações Pessoais">
+            <mat-card>
+                <mat-card-subtitle>Informações Pessoais</mat-card-subtitle>
+                <div class="form-grid">
+                    <mat-form-field class="six">
+                        <mat-label>Nome:</mat-label>
+                        <input matInput [(ngModel)]="element.nome">
+                    </mat-form-field>
+                    <mat-form-field class="two">
+                        <mat-label>RG:</mat-label>
+                        <input matInput [(ngModel)]="element.rg">
+                    </mat-form-field>
+                    <mat-form-field class="two">
+                        <mat-label>CPF:</mat-label>
+                        <input matInput [textMask]="{mask: masks.CPF}" [(ngModel)]="element.cpf">
+                    </mat-form-field>
+                    <div class="two">
+                        <custom-datetimepicker [(value)]="element.dataNascimento" name='Data de Nascimento'>
+                        </custom-datetimepicker>
+                    </div>
+                    <mat-form-field class="six">
+                        <mat-label>Nome do Pai:</mat-label>
+                        <input matInput [(ngModel)]="element.nomePai">
+                    </mat-form-field>
+                    <mat-form-field class="six">
+                        <mat-label>Nome da Mãe:</mat-label>
+                        <input matInput [(ngModel)]="element.nomeMae">
+                    </mat-form-field>
+                </div>
+            </mat-card>
+            <mat-card>
+                <mat-card-subtitle>Endereço e Contato</mat-card-subtitle>
+                <div class="form-grid">
+                    <mat-form-field class="three" >
+                        <mat-label>CEP:</mat-label>
+                        <input matInput [textMask]="{mask: masks.CEP}" [(ngModel)]="element.cep">
+                        <button mat-raised-button color="accent" matSuffix (click)="buscarCep()">Buscar CEP</button>
+                    </mat-form-field>
+                    <mat-form-field class="six">
+                        <mat-label>Endereço:</mat-label>
+                        <input matInput [(ngModel)]="element.endereco">
+                    </mat-form-field>
+                    <mat-form-field class="three">
+                        <mat-label>Bairro:</mat-label>
+                        <input matInput [(ngModel)]="element.bairro">
+                    </mat-form-field>
+                    <mat-form-field class="three">
+                        <mat-label>Cidade:</mat-label>
+                        <input matInput [(ngModel)]="element.cidade">
+                    </mat-form-field>
+                    <mat-form-field class="three">
+                        <mat-label>Telefone:</mat-label>
+                        <input matInput [textMask]="{mask: masks.Telefone}" [(ngModel)]="element.telefone">
+                    </mat-form-field>
+                    <mat-form-field class="three">
+                        <mat-label>Celular:</mat-label>
+                        <input matInput [textMask]="{mask: masks.Celular}" [(ngModel)]="element.celular">
+                    </mat-form-field>
+                    <mat-form-field class="three">
+                        <mat-label>E-mail:</mat-label>
+                        <input matInput [(ngModel)]="element.email">
+                    </mat-form-field>
+                </div>
+            </mat-card>            
+        </mat-tab>
+        <mat-tab label="Cursos e Turmas">
+            <mat-card>
+                <div class="form-grid">
+                    <div class="three">
+                        <custom-datetimepicker [(value)]="element.dataMatricula" name='Data de Matrícula'>
+                        </custom-datetimepicker>
+                    </div>
+                    <div class="three">
+                        <custom-datetimepicker [(value)]="element.dataValidade" name='Data de Validade'>
+                        </custom-datetimepicker>
+                    </div>
+                    <mat-form-field class="six">
+                        <mat-label>Curso Anterior:</mat-label>
+                        <input matInput [(ngModel)]="element.cursoAnterior">
+                    </mat-form-field>
+                </div>
+            </mat-card>
+            <mat-card>
+                <mat-card-subtitle>Turmas e Cursos</mat-card-subtitle>
+                <div class="form-grid">
+                    <div class="four" >
+                        <custom-select label='Curso:'
+                                       field='nome'
+                                       [options]="cursosOptions"
+                                       [(selected)]="cursoSelecionado"
+                                       (select)="buscarTurmas()">
+                        </custom-select>
+                    </div>
+                    <div class="four" >
+                        <custom-select label='Turmas:'
+                                       field='codigo'
+                                       [options]="turmasOptions"
+                                       [(selected)]="turmaSelecionada">
+                        </custom-select>
+                    </div>
+                    <mat-form-field class="four" >
+                        <mat-label>Matrícula:</mat-label>
+                        <input matInput [(ngModel)]="matricula">
+                        <button mat-raised-button color="accent" matSuffix>Gerar Matrícula</button>
+                    </mat-form-field>
+                </div>
+            </mat-card>
+        </mat-tab>
+      </mat-tab-group>
 </div>
