--- a/ctep-electron/src/app/view/turma/formulario-turma/formulario-turma.component.html
+++ b/ctep-electron/src/app/view/turma/formulario-turma/formulario-turma.component.html
@@ -1,4 +1,4 @@
-<div class="formulario">
+<!-- <div class="formulario">
     <div class="header">
         <div class="six">
             <h1>{{element.id!=null ? 'Edição' : 'Cadastro' }} de Turma</h1>
@@ -42,4 +42,4 @@
             </mat-form-field>
         </div>
     </mat-card>
-</div>
+</div> -->
