--- a/ctep-electron/src/app/view/home/home.component.scss
+++ b/ctep-electron/src/app/view/home/home.component.scss
@@ -11,7 +11,7 @@
         position: absolute;
         padding: 20px;
         width: calc(100% - 40px);
-        max-height: 100%;
+        max-height: calc(100% - 40px);
         overflow-y: auto;
     }
 }
