--- a/ctep-electron/src/theming.scss
+++ b/ctep-electron/src/theming.scss
@@ -22,5 +22,6 @@ $light-gray:#75848a;
 $black: #191716;
 $red: #520B03;
 $white: #F0F8FF;
+$off-white: #edeeef;
 $gray-blue: #78849E;
 $light-blue: #bbced3;
