--- a/ctep-electron/src/app/view/turma/formulario-turma/formulario-turma.component.html
+++ b/ctep-electron/src/app/view/turma/formulario-turma/formulario-turma.component.html
@@ -15,7 +15,8 @@
                 <custom-select label='Curso:'
                                field='nome'
                                [options]="cursosOptions"
-                               [(selected)]="cursoSelecionado">
+                               [(selected)]="cursoSelecionado"
+                               [disabled]='isEdicao'>
                 </custom-select>
             </div>
             <div class="four">
@@ -28,8 +29,8 @@
             </div>
             <mat-form-field class="four" >
                 <mat-label>Código:</mat-label>
-                <input matInput [(ngModel)]="element.codigo">
-                <button mat-raised-button color="accent" matSuffix (click)="gerarCodigoDaTurma()">Buscar CEP</button>
+                <input matInput [(ngModel)]="element.codigo" [disabled]='isEdicao'>
+                <button mat-raised-button color="accent" matSuffix (click)="gerarCodigoDaTurma()" [disabled]='isEdicao'>Gerar Código</button>
             </mat-form-field>
             <mat-form-field class="four">
                 <mat-label>Dias da Semana:</mat-label>
