--- a/ctep-electron/src/styles.scss
+++ b/ctep-electron/src/styles.scss
@@ -210,7 +210,7 @@ body {
     border-spacing: 0;
     border-collapse: collapse;
     thead {
-        th {
+        th.mat-header-cell {
             color: $white;
             background-color: $gray;
             padding: 8px 5px;
@@ -219,6 +219,9 @@ body {
         }
         th:first-child {
             padding-left: 10px!important;
+        }
+        tr.mat-header-row {
+            height: 45px;
         }
     }
     th, td {
@@ -234,7 +237,7 @@ body {
         }
         tr:nth-child(even) {
             td {
-                background-color: #edeeef;
+                background-color: $off-white;
             }
         }
         tr {
@@ -254,6 +257,9 @@ body {
                         border-bottom: none;
                     }
                 }
+            }
+            &.mat-row {
+                height: 40px;
             }
         }
     }
@@ -276,4 +282,7 @@ body {
     }
     background-color: white;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+.mat-progress-spinner circle, .mat-spinner circle {
+    stroke: $off-white;
 }
