--- a/ctep-electron/src/styles.scss
+++ b/ctep-electron/src/styles.scss
@@ -19,7 +19,7 @@ body {
                 margin: 10px 5px;
             }
             .mat-card {
-                margin: 20px 0;
+                margin-bottom: 20px;
                 box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
             }
             .header {
